# rules_ansible

./: .bazelrc  .gitignore  .pyproject.toml  404.html  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.github/: .gitignore  release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  docs.yaml  release.yaml
ansible/: .ansible-lint.yaml  BUILD.bazel  ansible.cfg  defs.bzl  pip_deps.bzl  pip_deps_install.bzl  repositories.bzl  requirements.in  requirements.txt  toolchain.bzl  transitive.bzl
ansible/private/: BUILD.bazel  ansible.bzl  ansible.py  ansible_doc.py  ansible_launcher.py  ansible_lint_process_wrapper.py  ansible_lint_runner.py  ansible_playbook.py  ansible_setup_py_script.py  ansible_vault.py  lint.bzl
ansible/private/requirements/: BUILD.bazel
ansible/private/utils/: BUILD.bazel  copier.py  utils.bzl
ansible/toolchains/: BUILD.bazel
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md
private/: BUILD.bazel  ansible.bzl  ansible_launcher.py  ansible_lint_process_wrapper.py  ansible_lint_runner.py  lint.bzl
private/scripts/: ansible_config.py  ansible_galaxy.py  ansible_playbook.py  ansible_vault.py
private/utils/: BUILD.bazel  copier.bat  copier.sh  utils.bzl
tests/: BUILD.bazel  Dockerfile  infra_setup.py
tests/lamp_simple/: BUILD.bazel  README.md
tests/lamp_simple/roles/common/handlers/: main.yml
tests/lamp_simple/roles/common/tasks/: main.yaml  main.yml
tests/lamp_simple/roles/db/handlers/: main.yaml
tests/lamp_simple/roles/db/tasks/: main.yaml  main.yml
tests/lamp_simple/roles/web/handlers/: main.yaml
tests/lamp_simple/roles/web/tasks/: copy_code.yaml  copy_code.yml  install_httpd.yaml  install_httpd.yml  main.yaml
tests/multi_role/: BUILD.bazel  hosts  site.yaml
tests/multi_role/group_vars/: dbservers.yaml
tests/multi_role/roles/common/: main.yaml
tests/multi_role/roles/db/handlers/: main.yaml
tests/multi_role/roles/db/tasks/: main.yaml
tests/multi_role/roles/web/files/: nginx.conf
tests/multi_role/roles/web/tasks/: main.yaml
tests/simple/: BUILD.bazel  hosts  site.yaml
tests/simple/group_vars/: all.yaml
tests/simple/roles/rust/: main.yaml
tools/repo_version/: BUILD.bazel  version_test.py
tools/requirements/: BUILD.bazel  requirements.in  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
