workspace(name = "rules_ansible")

load("@rules_ansible//ansible:repositories.bzl", "ansible_register_toolchains", "rules_ansible_dependencies")

rules_ansible_dependencies()

ansible_register_toolchains()

load("@rules_ansible//ansible:transitive.bzl", "rules_ansible_transitive_dependencies")

rules_ansible_transitive_dependencies()

load("@rules_ansible//ansible:pip_deps.bzl", "rules_ansible_pip_dependencies")

rules_ansible_pip_dependencies()

load("@rules_ansible//ansible:pip_deps_install.bzl", "rules_ansible_pip_dependencies_install")

rules_ansible_pip_dependencies_install()

###############################################################################
# Internal dependencies

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "05fb57bb4ad68a360470420a3b6f5317e4f722839abc5b17ec4ef8ed465aaa47",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/stardoc/releases/download/0.5.2/stardoc-0.5.2.tar.gz",
        "https://github.com/bazelbuild/stardoc/releases/download/0.5.2/stardoc-0.5.2.tar.gz",
    ],
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()
