load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "requirements.in",
        "requirements.txt",
        "defs.bzl",
        "ansible.cfg",
        ".ansible-lint.yaml",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]) + [
        "@rules_python//python:bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//private:bzl_lib",
    ],
)

label_flag(
    name = "config",
    build_setting_default = ":ansible.cfg",
    visibility = ["//visibility:public"],
)

label_flag(
    name = "lint_config",
    build_setting_default = ":.ansible-lint.yaml",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

alias(
    name = "lint",
    actual = "//private:ansible_lint_runner",
    tags = ["manual"],
)
