load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "bzl_lib",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//ansible:bzl_lib",
    ],
)

stardoc(
    name = "docs",
    out = "README.md",
    input = "//ansible:defs.bzl",
    # TODO: https://github.com/bazelbuild/stardoc/issues/110
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [":bzl_lib"],
)

diff_test(
    name = "docs_diff_test",
    failure_message = "To fix, run 'cp -f ./bazel-bin/docs/README.md ./README.md' from the root of the repo.",
    file1 = ":docs",
    file2 = "//:README.md",
    # TODO: https://github.com/bazelbuild/stardoc/issues/110
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
