load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("//ansible:toolchain.bzl", "current_ansible_toolchain")

current_ansible_toolchain(
    name = "current_ansible",
    lib = "ansible",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

current_ansible_toolchain(
    name = "current_ansible_core",
    lib = "ansible_core",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

current_ansible_toolchain(
    name = "current_ansible_lint",
    lib = "ansible_lint",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "ansible_launcher",
    srcs = [
        "ansible_launcher.py",
        "scripts/ansible_playbook.py",
        "scripts/ansible_vault.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":current_ansible",
        ":current_ansible_core",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "ansible_lint_process_wrapper",
    srcs = [
        "ansible_lint_process_wrapper.py",
        "scripts/ansible.py",
        "scripts/ansible_config.py",
        "scripts/ansible_doc.py",
        "scripts/ansible_galaxy.py",
        "scripts/ansible_playbook.py",
        "scripts/ansible_vault.py",
    ],
    main = "ansible_lint_process_wrapper.py",
    visibility = ["//visibility:public"],
    deps = [
        ":current_ansible",
        ":current_ansible_core",
        ":current_ansible_lint",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "ansible_lint_runner",
    srcs = ["ansible_lint_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":ansible_lint_process_wrapper",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//ansible:__pkg__"],
    deps = [
        "//private/utils:bzl_lib",
    ],
)
