load("@rules_ansible.pip//:requirements.bzl", "requirement")
load("//ansible:defs.bzl", "ansible_toolchain")

ansible_toolchain(
    name = "ansible_toolchain_impl",
    ansible = requirement("ansible"),
    ansible_core = requirement("ansible_core"),
    ansible_lint = requirement("ansible_lint"),
    visibility = ["//visibility:public"],
)

toolchain(
    name = "ansible_toolchain",
    toolchain = ":ansible_toolchain_impl",
    toolchain_type = "@rules_ansible//ansible:toolchain_type",
    visibility = ["//visibility:public"],
)
