load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":utils.bzl", "copier_binary")

copier_binary(
    name = "copier",
    is_windows = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)
