load("@rules_ansible//ansible:defs.bzl", "ansible_lint_test", "ansible_playbook")

ansible_playbook(
    name = "multi_role",
    hosts = "hosts",
    inventory = ["hosts"] + glob([
        "group_vars/**",
    ]),
    playbook = "site.yaml",
    roles = glob(["roles/**"]),
)

ansible_lint_test(
    name = "multi_role_lint_test",
    playbook = ":multi_role",
)
