load("@rules_ansible//ansible:defs.bzl", "ansible_lint_test", "ansible_playbook")

ansible_playbook(
    name = "simple",
    hosts = "hosts",
    inventory = ["hosts"] + glob([
        "group_vars/**",
    ]),
    playbook = "site.yaml",
    roles = glob(["roles/**"]),
)

ansible_lint_test(
    name = "simple_lint_test",
    playbook = ":simple",
)
