load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "//ansible:requirements.in",
    requirements_txt = "//ansible:requirements.txt",
    tags = ["manual"],
)
